--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
 <body>
   <div class="wrap">
+
+    <div class="menuOpen">
+      <button class="open">
+        <img src="img/open-icon.png" alt="열기">
+      </button>
+    </div> <!--//menuOpen-->
+
+
     <header>
       <div class="innerheader">
         <h1 class="logo">
@@ -84,7 +92,7 @@
 
     <section class="jurnal">
       <p class="scroll">scroll</p>
-      <div class="circleBox">
+      <div class="circleBox animate" data-animate="motion">
         <svg class="svgAni" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1984.25 1984.25"
           style="enable-background:new 0 0 1984.25 1984.25;" xml:space="preserve">
