--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <button class="open">
         <img src="img/open-icon.png" alt="열기">
       </button>
-    </div> <!--//menuOpen-->
+    </div>
+    <!--//menuOpen-->
 
 
     <header>
@@ -159,6 +160,153 @@
       <!--//inner-->
     </section>
     <!--//jurnal-->
+
+    <section class="service">
+      <div class="inner">
+        <div class="box">
+          <h2 class="tit en animate" data-animate="motion">
+            <span class="en_s">
+              <b>Connected service</b>
+            </span>
+            <span><b>Capabilities</b></span>
+          </h2>
+        </div>
+        <!--//box-->
+        <div class="box">
+          <div class="txt">
+            <p> ‘뮤자인’은 성공적인 프로젝트 경험을 바탕으로 통찰력 있는 전략 수립과 글로벌 환경에 최적화된 웹사이트 제작 및 운영, 세련된 콘텐츠 디자인 등 다양한 범위에 온라인 인프라를
+              제공합니다.<br>
+              우리는 다변화하는 시장 환경을 이끌며 이슈를 넘어 센세이션을 만드는 ‘Total Global Marketing Agency’입니다.</p>
+            <a href="#" class="moreBtn">read more</a>
+          </div>
+          <!--//txt-->
+          <p class="img animate" data-animate="motion">
+            <img src="img/img_02.jpg" alt="이미지">
+          </p>
+        </div>
+        <!--//box-->
+        <div class="box design">
+          <h2 class="tit en animate" data-animate="motion">
+            <span><b>BRAND, CUSTOMERS</b></span>
+            <span><b>EXPERIENCE</b></span>
+            <span><b>DESIGN</b></span>
+          </h2>
+          <a href="#" class="moreBtn">read more</a>
+          <p class="img animate" data-animate="motion">
+            <img src="img/img_03.jpg" alt="3">
+          </p>
+        </div>
+        <!--//box-->
+      </div>
+    </section>
+    <!--//service-->
+
+    <section class="customer">
+      <h2 class="tit en">
+        <span>Every customer gives us new inspiration.</span>
+      </h2>
+      <div class="txt">
+        기업의 가치를 효율적으로 전달하기 위해, 혹은 더 많은 사람들에게 브랜드와 제품을 알리기 위해 노력합니다.
+      </div>
+    </section>
+    <!--//customer-->
+
+    <section class="team">
+      <div class="circleBox animate" data-animate="motion">
+        <svg class="svgAni" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1984.25 1984.25"
+          style="enable-background:new 0 0 1984.25 1984.25;" xml:space="preserve">
+          <style type="text/css">
+            .st0 {
+              fill: none;
+              stroke: #f5f5f5;
+              stroke-width: 25;
+              stroke-miterlimit: 10;
+            }
+          </style>
+          <path class="st0"
+            d="M990.51,42c526.88,0,954,427.12,954,954s-427.12,954-954,954s-954-427.12-954-954S463.63,42,990.51,42" />
+        </svg>
+      </div>
+      <!--//circleBox-->
+      <div class="inner">
+        <div class="box left">
+          <h2 class="tit en animate" data-animate="motion">
+            <span class="en_s">
+              <b>are you a digital expert?</b>
+            </span>
+            <span>
+              <b>Join our team</b>
+            </span>
+          </h2>
+          <div class="txt">
+            <p> 각자의 개성이 넘치는 뮤자이너들은 모두 일을 즐기는 스페셜리스트이며, 유머러스한 프로들입니다.<br>
+              뮤자인의 문은 항상 열려있으니, 언제든 찾아와주세요.</p>
+          </div>
+          <!--//txt-->
+          <a href="#" class="moreBtn">read more</a>
+          <p class="img animate" data-animate="motion">
+            <img src="img/img_05.jpg" alt="이미지">
+          </p>
+        </div>
+        <!--//box-->
+        <div class="box">
+          <p class="img animate" data-animate="motion">
+            <img src="img/img_06.jpg" alt="이미지">
+          </p>
+          <h2 class="tit en animate" data-animate="motion">
+            <span class="en_s">
+              <b>say hello</b>
+            </span>
+            <span>
+              <b>Inquiry now</b>
+            </span>
+          </h2>
+          <div class="txt animate" data-animate="motion">
+            <p>각 분야의 전문가들과 함께하세요! 브랜드의 영향력은 곧 비즈니스의 경쟁력입니다.<br>
+              Our doors are always open, so come anytime. </p>
+          </div>
+          <a href="#" class="moreBtn">read more</a>
+        </div>
+      </div>
+      <!--//inner-->
+    </section>
+    <!--//team-->
+
+    <footer>
+      <div class="top">
+        <h2 class="tit en animate" data-animate="motion">
+          <span><b>musigned by musign</b></span>
+        </h2>
+      </div>
+      <!--//top-->
+      <div class="bottom en">
+        <ul>
+          <li>MUSIGN <br>
+            DIGITAL EXPERIENCE<br>
+            PLATFORM</li>
+          <li><b>Address</b><br>
+            9F, 5F, 156 Seongan-ro<br>
+            Gangdong-gu, Seoul,<br>
+            Korea
+          </li>
+          <li>
+            <b>Contacts</b><br>
+            <b>T</b> 02 123 4567<br>
+            <b>T</b> 070 123 4567<br>
+            <b>E</b> hi@musign.net
+          </li>
+          <li>
+            <b>SNS</b><br>
+            Behance<br>
+            Facebook<br>
+            Instagram<br>
+            Blog
+          </li>
+        </ul>
+      </div>
+      <!--//bottom-->
+    </footer>
   </div>
 
 
